--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,10 +45,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n ∆ select-pane -L
+bind -n ˚ select-pane -D 
+bind -n ¬ select-pane -U
+bind -n … select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -57,8 +57,8 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+bind -n Ô previous-window
+bind -n Ú next-window
 
 # No delay for escape key press
 set -sg escape-time 0
